Solve colors issue of dark mode switcher

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -1,7 +1,3 @@
-/* nav li {
-    max-height: 150px;
-} */
-
 nav label {
     width: 50px;
     height: 20px;
